# HH_mailing

./: gui.py  locators.py  main.py  pyproject.toml  requirements.txt  start_from_file.py
