[tool.poetry]
name = "hh_auto_mailling"
version = "0.1.0"
description = ""
authors = ["HappyCthulhu <valeriyg98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
selenium = "^3.141.0"
PyYAML = "^5.4.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
